--- a/index.htm
+++ b/index.htm
@@ -266,7 +266,7 @@ left:10px;top:1022px;width:663px;height:24px'>
   <td width=663 height=24 style='vertical-align:top'><![endif]>
   <div v:shape="_x0000_s1087" style='padding:2.88pt 2.88pt 2.88pt 2.88pt'
   class=shape>
-  <p class=MsoNormal><span lang=en-US style='language:en-US'>WEBMASTER: Sebastian Kyle Alexander Alvarez  https://www.facebook.com/destroyerto</span></p>
+  <p class=MsoNormal><span lang=en-US style='language:en-US'>WEBMASTER: Sebastian Kyle Alexander AlvarezÂ  https://www.facebook.com/destroyerto</span></p>
   </div>
   <![if !vml]></td>
  </tr>
